--- a/config/rules/core/06_distribution_unreachable.yaml
+++ b/config/rules/core/06_distribution_unreachable.yaml
@@ -10,7 +10,6 @@ sources:
   - "Go-to-market fundamentals"
 owner: core
 version: v1
-sunset: 2027-12-31
+sunset: "2027-12-31"
 next_steps:
   - "Identify wedge segments and credible channels to access the first cohort."
-
