--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,12 +23,11 @@ jobs:
           curl -LsSf https://astral.sh/uv/install.sh | sh
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      - name: Sync dependencies (core only)
+      - name: Install core dependencies (no extras)
         run: |
           uv venv -p 3.11
-          uv sync
+          uv pip install -p .venv/bin/python -r requirements.txt
 
       - name: Run smoke test
         run: |
-          uv run python tests/smoke.py
-
+          .venv/bin/python tests/smoke.py
