feat: add .env.example and dotenv support; read LLM_API_URL/LLM_API_KEY; update docs and ignore .env

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
 # Core dependencies (for non-uv users). Optional LLM deps are extras via pyproject.toml
 pydantic>=2.6
 PyYAML>=6.0
+python-dotenv>=1.0.1
