--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ authors = [
 dependencies = [
   "pydantic>=2.6",
   "PyYAML>=6.0",
+  "python-dotenv>=1.0.1",
 ]
 
 [project.optional-dependencies]
