--- a/config/model.yaml
+++ b/config/model.yaml
@@ -1,7 +1,11 @@
 provider: openai
-model: gpt-4o-mini
-base_url: https://api.openai.com/v1
-api_key: sk-your-key-here
+model: google/gemini-2.5-flash-lite-preview-09-2025
+base_url: https://openrouter.ai/api/v1
+api_key: sk-or-your-openrouter-key
+headers:
+  # Optional but recommended by OpenRouter:
+  # HTTP-Referer: https://your-site-or-repo
+  # X-Title: Idea-Crucible
 temperature: 0.2
 max_tokens: 800
 timeout_s: 30
