--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,7 @@ jobs:
           uv venv -p 3.11
           uv pip install -p .venv/bin/python -r requirements.txt
 
-      - name: Run smoke test
+      - name: Run schema and smoke tests (no LLM calls)
         run: |
+          .venv/bin/python tests/rules_schema.py
           .venv/bin/python tests/smoke.py
